# nanobot-feishu-tools

./: .gitignore  README.md  pyproject.toml
nanobot_feishu_tools/: __init__.py  _api.py  _client.py  _config.py
nanobot_feishu_tools/bitable/: actions.py  meta.py  tools.py
nanobot_feishu_tools/doc/: actions.py  tool.py
nanobot_feishu_tools/im/: actions.py  tool.py
nanobot_feishu_tools/perm/: actions.py  tool.py
nanobot_feishu_tools/skills/feishu-bitable/: SKILL.md
nanobot_feishu_tools/skills/feishu-doc/: SKILL.md
nanobot_feishu_tools/skills/feishu-im/: SKILL.md
nanobot_feishu_tools/skills/feishu-perm/: SKILL.md
nanobot_feishu_tools/skills/feishu-task/: SKILL.md
nanobot_feishu_tools/skills/feishu-wiki/: SKILL.md
nanobot_feishu_tools/task/: actions.py  tools.py
nanobot_feishu_tools/wiki/: actions.py  tool.py
tests/: conftest.py  test_bitable_tools.py  test_client.py  test_config.py  test_doc_tool.py  test_im_tool.py  test_perm_tool.py  test_task_tools.py  test_wiki_tool.py
